--- a/privacy.html
+++ b/privacy.html
@@ -1,10 +1,111 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Privacy Policy</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy - Green Basket</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+            padding: 0;
+            color: #333;
+        }
+        h1, h2, h3 {
+            color: #2c3e50;
+        }
+        p {
+            margin-bottom: 1em;
+        }
+        .container {
+            max-width: 800px;
+            margin: auto;
+        }
+        .section {
+            margin-bottom: 2em;
+        }
+    </style>
 </head>
 <body>
-    <h1>Privacy Policy</h1>
-    <p>This is the privacy policy.</p>
+    <div class="container">
+        <h1>Privacy Policy</h1>
+        <p>Effective Date: [Insert Date]</p>
+
+        <div class="section">
+            <h2>Introduction</h2>
+            <p>Welcome to the Green Basket app. This privacy policy explains how we collect, use, disclose, and protect your personal information when you use our app and related services. By using Green Basket, you agree to the collection and use of your information in accordance with this policy.</p>
+        </div>
+
+        <div class="section">
+            <h2>Information We Collect</h2>
+            <h3>1. Information You Provide</h3>
+            <p>When you use our app, we may collect information you provide directly to us, such as when you create an account, update your profile, or contact customer support. This may include:</p>
+            <ul>
+                <li>Your name, email address, and phone number</li>
+                <li>Account login details</li>
+                <li>Any other information you choose to provide</li>
+            </ul>
+
+            <h3>2. Information We Collect Automatically</h3>
+            <p>We may also collect information automatically when you use our app, including:</p>
+            <ul>
+                <li>Device information (such as your IP address, device ID, and browser type)</li>
+                <li>Usage information (such as the pages you view and the time spent on them)</li>
+                <li>Location information (if you have enabled location services on your device)</li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>How We Use Your Information</h2>
+            <p>We use the information we collect for various purposes, including:</p>
+            <ul>
+                <li>To provide, maintain, and improve our app and services</li>
+                <li>To personalize your experience and deliver content and products relevant to you</li>
+                <li>To communicate with you, including sending updates, notifications, and support messages</li>
+                <li>To analyze usage and trends to improve our services</li>
+                <li>To protect our rights and the security of our users</li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>Sharing Your Information</h2>
+            <p>We do not share your personal information with third parties except in the following circumstances:</p>
+            <ul>
+                <li>With your consent or at your direction</li>
+                <li>To comply with legal obligations, such as responding to subpoenas or court orders</li>
+                <li>To protect the rights, property, or safety of our users or the public</li>
+                <li>With service providers who perform services on our behalf, such as hosting and data analysis</li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>Your Choices and Rights</h2>
+            <p>You have certain rights regarding your personal information, including:</p>
+            <ul>
+                <li>Accessing and updating your information through your account settings</li>
+                <li>Requesting deletion of your personal information</li>
+                <li>Opting out of marketing communications</li>
+                <li>Disabling location tracking on your device</li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>Data Security</h2>
+            <p>We take reasonable measures to protect your information from unauthorized access, use, or disclosure. However, no method of transmission over the internet or electronic storage is completely secure, and we cannot guarantee absolute security.</p>
+        </div>
+
+        <div class="section">
+            <h2>Changes to This Privacy Policy</h2>
+            <p>We may update this privacy policy from time to time. If we make significant changes, we will notify you through the app or by other means before the changes take effect. Your continued use of the app after the changes are made will constitute your acceptance of the revised policy.</p>
+        </div>
+
+        <div class="section">
+            <h2>Contact Us</h2>
+            <p>If you have any questions or concerns about this privacy policy or our practices, please contact us at:</p>
+            <p>Email: support@greenbasket.com</p>
+            <p>Address: Green Basket, Astana, Kazakhstan</p>
+        </div>
+    </div>
 </body>
 </html>
