--- a/privacy.html
+++ b/privacy.html
@@ -11,6 +11,7 @@
             margin: 20px;
             padding: 0;
             color: #333;
+            background-color: #f4f4f4;
         }
         h1, h2, h3 {
             color: #2c3e50;
@@ -18,9 +19,16 @@
         p {
             margin-bottom: 1em;
         }
+        ul {
+            margin-left: 20px;
+        }
         .container {
             max-width: 800px;
             margin: auto;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         .section {
             margin-bottom: 2em;
@@ -34,76 +42,77 @@
 
         <div class="section">
             <h2>Introduction</h2>
-            <p>Welcome to the Green Basket app. This privacy policy explains how we collect, use, disclose, and protect your personal information when you use our app and related services. By using Green Basket, you agree to the collection and use of your information in accordance with this policy.</p>
+            <p>Welcome to Green Basket. This privacy policy explains how we collect, use, disclose, and protect your personal information when you use our app and related services. By using Green Basket, you agree to the collection and use of your information in accordance with this policy.</p>
         </div>
 
         <div class="section">
             <h2>Information We Collect</h2>
             <h3>1. Information You Provide</h3>
-            <p>When you use our app, we may collect information you provide directly to us, such as when you create an account, update your profile, or contact customer support. This may include:</p>
+            <p>When you use our app, we collect information you provide directly to us. This includes:</p>
             <ul>
-                <li>Your name, email address, and phone number</li>
-                <li>Account login details</li>
-                <li>Any other information you choose to provide</li>
+                <li>Your Google account information (name, email address) when you sign in using your Google account</li>
+                <li>Details of products you scan and add to your virtual cart</li>
+                <li>User preferences and settings within the app</li>
+                <li>Feedback and support queries</li>
             </ul>
 
-            <h3>2. Information We Collect Automatically</h3>
-            <p>We may also collect information automatically when you use our app, including:</p>
+            <h3>2. Automatically Collected Information</h3>
+            <p>We also collect certain information automatically when you use our app, including:</p>
             <ul>
-                <li>Device information (such as your IP address, device ID, and browser type)</li>
-                <li>Usage information (such as the pages you view and the time spent on them)</li>
-                <li>Location information (if you have enabled location services on your device)</li>
+                <li>Device information (such as IP address, device ID, and browser type)</li>
+                <li>Usage data (such as pages viewed, time spent on the app, and actions taken)</li>
+                <li>Location data, if enabled on your device, to enhance app functionality and provide location-based services</li>
             </ul>
         </div>
 
         <div class="section">
             <h2>How We Use Your Information</h2>
-            <p>We use the information we collect for various purposes, including:</p>
+            <p>We use the information we collect for the following purposes:</p>
             <ul>
-                <li>To provide, maintain, and improve our app and services</li>
-                <li>To personalize your experience and deliver content and products relevant to you</li>
-                <li>To communicate with you, including sending updates, notifications, and support messages</li>
-                <li>To analyze usage and trends to improve our services</li>
-                <li>To protect our rights and the security of our users</li>
+                <li>To provide and maintain our services, including storing and managing your virtual cart and scanned products</li>
+                <li>To personalize your app experience based on your preferences and usage patterns</li>
+                <li>To send notifications and updates about your shopping cart, product expiration dates, and new features</li>
+                <li>To analyze usage and improve our app functionality and user experience</li>
+                <li>To respond to your support requests and provide customer service</li>
             </ul>
         </div>
 
         <div class="section">
             <h2>Sharing Your Information</h2>
-            <p>We do not share your personal information with third parties except in the following circumstances:</p>
+            <p>We do not share your personal information with third parties except in the following cases:</p>
             <ul>
-                <li>With your consent or at your direction</li>
-                <li>To comply with legal obligations, such as responding to subpoenas or court orders</li>
-                <li>To protect the rights, property, or safety of our users or the public</li>
-                <li>With service providers who perform services on our behalf, such as hosting and data analysis</li>
+                <li>With your explicit consent or at your direction</li>
+                <li>To comply with legal obligations, such as responding to subpoenas, court orders, or legal processes</li>
+                <li>To protect the rights, property, or safety of Green Basket, our users, or the public</li>
+                <li>With service providers who perform functions on our behalf, such as data storage and analytics</li>
             </ul>
         </div>
 
         <div class="section">
             <h2>Your Choices and Rights</h2>
-            <p>You have certain rights regarding your personal information, including:</p>
+            <p>You have certain rights and choices regarding your personal information, including:</p>
             <ul>
-                <li>Accessing and updating your information through your account settings</li>
-                <li>Requesting deletion of your personal information</li>
-                <li>Opting out of marketing communications</li>
-                <li>Disabling location tracking on your device</li>
+                <li>Accessing and updating your personal information through your Google account settings</li>
+                <li>Requesting deletion of your personal data by contacting us</li>
+                <li>Opting out of receiving marketing communications from us</li>
+                <li>Disabling location services to limit the collection of location data</li>
             </ul>
         </div>
 
         <div class="section">
             <h2>Data Security</h2>
-            <p>We take reasonable measures to protect your information from unauthorized access, use, or disclosure. However, no method of transmission over the internet or electronic storage is completely secure, and we cannot guarantee absolute security.</p>
+            <p>We take reasonable measures to protect your information from unauthorized access, alteration, disclosure, or destruction. However, no method of transmission over the internet or method of electronic storage is 100% secure, and we cannot guarantee absolute security.</p>
         </div>
 
         <div class="section">
             <h2>Changes to This Privacy Policy</h2>
-            <p>We may update this privacy policy from time to time. If we make significant changes, we will notify you through the app or by other means before the changes take effect. Your continued use of the app after the changes are made will constitute your acceptance of the revised policy.</p>
+            <p>We may update this privacy policy periodically. We will notify you of any significant changes via email or within the app. Your continued use of the app after changes have been made will constitute your acceptance of the updated policy.</p>
         </div>
 
         <div class="section">
             <h2>Contact Us</h2>
-            <p>If you have any questions or concerns about this privacy policy or our practices, please contact us at:</p>
-            <p>Email: support@greenbasket.com</p>
+            <p>If you have any questions or concerns about this privacy policy or our data practices, please contact us at:</p>
+            <p>Email: greenbasketkz@gmail.com</p>
             <p>Address: Green Basket, Astana, Kazakhstan</p>
         </div>
     </div>
