--- a/privacy.html
+++ b/privacy.html
@@ -38,7 +38,7 @@
 <body>
     <div class="container">
         <h1>Privacy Policy</h1>
-        <p>Effective Date: [Insert Date]</p>
+        <p>Effective Date: 03.09.2024</p>
 
         <div class="section">
             <h2>Introduction</h2>
