--- a/privacy.html
+++ b/privacy.html
@@ -74,6 +74,7 @@
                 <li>To send notifications and updates about your shopping cart, product expiration dates, and new features</li>
                 <li>To analyze usage and improve our app functionality and user experience</li>
                 <li>To respond to your support requests and provide customer service</li>
+                <li>To comply with legal obligations and protect our rights, users, and the public</li>
             </ul>
         </div>
 
@@ -86,6 +87,17 @@
                 <li>To protect the rights, property, or safety of Green Basket, our users, or the public</li>
                 <li>With service providers who perform functions on our behalf, such as data storage and analytics</li>
             </ul>
+        </div>
+
+        <div class="section">
+            <h2>How We Use Google User Data</h2>
+            <p>When you sign in with your Google account, we access your Google account information to:</p>
+            <ul>
+                <li>Authenticate your identity and provide access to the app</li>
+                <li>Store your preferences and settings for a personalized experience</li>
+                <li>Manage your product data and shopping history associated with your account</li>
+            </ul>
+            <p>We do not use Google user data for any purpose other than those explicitly stated, and we do not share this data with third parties except as described in this policy.</p>
         </div>
 
         <div class="section">
