--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
             color: white;
             text-align: center;
             padding: 10px 0;
-            position: fixed;
             width: 100%;
-            bottom: 0;
+            position: static; /* Changed from fixed */
+            margin-top: 20px;
         }
         .privacy-policy {
             margin-top: 20px;
@@ -91,7 +91,7 @@
         <p>We collect user-provided information such as Google account details (name, email) to personalize your shopping experience, store your virtual cart information, and provide you with tailored recipe suggestions. The data collected is used solely for enhancing your experience within the app and is not shared with third parties without your consent.</p>
 
         <div class="privacy-policy">
-            <p>For more details on how we handle your data, please read our <a href="privacy-policy.html">Privacy Policy</a>.</p>
+            <p>For more details on how we handle your data, please read our <a href="https://cuyzl.github.io/greenbasket-site/privacy.html">Privacy Policy</a>.</p>
         </div>
     </div>
 
